styles/Home.module.css
/* ... */
.cSlideNav {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  column-gap: 10px;
}

@media (max-width: 991.98px) {
  .cSlideNav {
    column-gap: 5px;
  }
}

.cSlideNav button {
  background: none;
  border: none;
  width: 35px;
  height: 35px;
  transition: opacity 0.4s ease;
  position: relative;
  z-index: 0;
}

@media (max-width: 991.98px) {
  .cSlideNav button {
    width: 30px;
    height: 30px;
  }
}

@media (max-width: 575.98px) {
  .cSlideNav button {
    width: 25px;
    height: 25px;
  }
}

.cSlideNav button.prev {
  transform: scaleX(-1);
}

.card {
  width: 100%;
  height: 100%;
  display: block;
  border: 1px solid #eee;
  padding: 30px;
  text-align: center;
  background-color: white;
  margin: 0 auto;
  border-radius: 16px;
  -webkit-border-radius: 16px;
  -moz-border-radius: 16px;
  -ms-border-radius: 16px;
  -o-border-radius: 16px;
  box-shadow: 0px 0px 8px 4px #e0e0e03b;
  cursor: pointer;
  position: relative;
}

@media (max-width: 991.98px) {
  .card {
    padding: 15px;
  }
}

@media (max-width: 575.98px) {
  .card {
    padding: 10px;
  }
}

.filnal_price {
  width: 60px;
  height: 60px;
  background-color: black;
  position: absolute;
  z-index: 1;
  top: 25px;
  left: 25px;
  border-radius: 50%;
  -webkit-border-radius: 50%;
  -moz-border-radius: 50%;
  -ms-border-radius: 50%;
  -o-border-radius: 50%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.swiperSlide{
  position: relative; 
}

.tamara_icon {
  width: 91px;
  /* height: 10%; */
  position: absolute;
  z-index: 1000;
  top: 2%;
  right: -1.5%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.tamara_icon img {
  width: 100%;
  height: 100%;
}

.filnal_price p {
  font-size: 22px;
  line-height: 1;
  font-weight: 700;
  text-transform: uppercase;
  color: white;
  margin: 0;
}

@media (max-width: 991.98px) {
  .filnal_price p {
    font-size: 18px;
  }
}

@media (max-width: 575.98px) {
  .filnal_price p {
    font-size: 16px;
  }
}

.filnal_price p span {
  font-size: 50%;
  display: block;
}

.card_image {
  position: relative;
  width: 100%;
  height: 250px;
  margin-bottom: 10px;
}

.card_image img {
  width: 100%;
  height: 100%;
}

.info_card {
  display: flex;
  position: relative;
  flex-direction: column;
  align-items: center;
  height: calc(100% - 250px);
}

.info_card img {
  width: 180px;
  position: absolute;
  object-fit: contain;
  z-index: 1000;
  bottom: -20px;
}

.info_card h4 {
  font-size: 20px;
  line-height: 1.2;
  font-weight: 600;
  margin-bottom: 15px;
}

/* @media (max-width: 1551.98px) {
  .info_card h4 {
    font-size: 22px;
  }
}

@media (max-width: 991.98px) {
  .info_card h4 {
    font-size: 20px;
  }
}

@media (max-width: 575.98px) {
  .info_card h4 {
    font-size: 18px;
  }
} */

.info_card h4 span {
  color: var(--main_color);
}

.info_card p {
  font-size: 16px;
  line-height: 1.4;
  font-weight: 400;
  color: #494444;
  margin: 0;
  margin-left: 5px;
}

@media (max-width: 991.98px) {
  .info_card p {
    font-size: 14px;
  }
}

.info_card p span {
  color: black;
}

.info_card div {
  color: gray;
}

.info_card ul {
  list-style: none;
  margin: 0;
  padding: 0;
  height: 190px;
  overflow-y: auto;
}

@media (max-width: 1399.98px) {
  .info_card ul {
    height: 245px;
  }

}

@media (max-width: 1199.98px) {
  .info_card ul {
    height: 270px;
  }

}

@media (max-width: 991.98px) {
  .info_card ul {
    height: 180px;
  }

}

@media (max-width: 575.98px) {
  .info_card ul {
    height: 160px;
  }

}

@media (max-width: 375.98px) {
  .info_card ul {
    height: 140px;
  }

}

.info_card ul::-webkit-scrollbar {
  width: 5px;
}

.info_card ul::-webkit-scrollbar-track {
  background-color: #ebebeb;
  -webkit-border-radius: 5px;
  border-radius: 5px;
}

.info_card ul::-webkit-scrollbar-thumb {
  -webkit-border-radius: 5px;
  border-radius: 5px;
  background: #a1a1a1;
}

.info_card ul li {
  position: relative;
  z-index: 0;
  padding: 0;
  margin-bottom: 10px;
  list-style-image: url("data:image/svg+xml,%3Csvg width='7' height='7' viewBox='0 0 7 7' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle cx='3.5' cy='3.5' r='3.5' fill='url(%23paint0_linear_2016_34)'/%3E%3Cdefs%3E%3ClinearGradient id='paint0_linear_2016_34' x1='0' y1='3.5' x2='7' y2='3.5' gradientUnits='userSpaceOnUse'%3E%3Cstop stop-color='%23C08450'/%3E%3Cstop offset='1' stop-color='%239E6439'/%3E%3C/linearGradient%3E%3C/defs%3E%3C/svg%3E%0A");
}

@media (max-width: 991.98px) {
  .info_card ul li {
    margin-bottom: 5px;
  }
}

.rightText li {
  margin-right: 20px;
  text-align: right;
}

@media (max-width: 991.98px) {
  .rightText li {
    margin-right: 20px;
  }
}

@media (max-width: 575.98px) {
  .rightText li {
    margin-right: 10px;
  }
}

.leftText li {
  text-align: left;
  margin-left: 15px;
}

@media (max-width: 991.98px) {
  .leftText li {
    margin-left: 10px;
  }
}

@media (max-width: 575.98px) {
  .leftText li {
    margin-left: 10px;
  }
}

.program_month {
  align-self: flex-start;
}

.info_card ul li svg {
  color: #ad8460;
}

.price_offer {
  display: flex;
  align-items: center;
  justify-content: center;
  margin: 15px auto;
}

.price_offer h5 {
  font-size: 48px;
  font-weight: 600;
  line-height: 1;
  text-align: center;
  color: #9E6439;
  position: relative;
  z-index: 0;
}

@media (max-width: 991.98px) {
  .price_offer h5 {
    font-size: 36px;
  }
}

@media (max-width: 575.98px) {
  .price_offer h5 {
    font-size: 30px;
  }
}

.rightPrice h5 {
  margin-left: 20px;
}

.leftPrice h5 {
  margin-right: 20px;
}

.price_offer h5 span {
  font-size: 12px;
  color: #9e9999;
}

.price_offer h6 {
  font-size: 34px;
  line-height: 1;
  font-weight: 600;
  color: #9e9999;
  position: relative;
  z-index: 0;
}

@media (max-width: 991.98px) {
  .price_offer h6 {
    font-size: 24px;
  }
}

@media (max-width: 575.98px) {
  .price_offer h6 {
    font-size: 16px;
  }
}

.price_offer h6 span {
  font-size: 12px;
}
/* ... */

